# TeachCopilot

./: .gitignore  FILTER_INSTALL.md  MVP_STATUS.md  README.md  START_PROMPT.md  pyproject.toml  requirements.txt  server.py
_docs/: child profile.txt  personal data.txt
books/: rag_secret_test.md  small_geometry_test.md  широкая база.rtf
db/: schema.sql
pipeline/: config.py  db.py  event_logger.py  filter_function.py  profile_agent.py  prompt_builder.py  rag.py
prompts/: adult_prompt.txt  system_prompt.txt
scripts/: apply_schema.py  ingest.py  manage_profiles.py  show_prompt.py  test_pipeline.py
