[project]
name = "TeachCopilot_RAG"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langsmith>=0.8.3",
    "markdown>=3.10.2",
    "numpy>=2.2.6",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "striprtf>=0.0.32",
    "tiktoken>=0.12.0",
    "torch==2.11.0+cu128",
    "torchaudio==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "langgraph-cli[inmem]>=0.4.25",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
